# hotclaw

./: .env.example  .gitignore  ARCHITECTURE.md  Notice.md  ai_readme.md  browser_automation.py  check_qoder_report.py  newairead.md  qianduanread.md  start.bat  start.sh
OpenClaw-bot-review-main/: .dockerignore  Dockerfile  LICENSE  README.md  package-lock.json  (+2 more)
backend/: README.md  alembic.ini  mayun_translator_prompt.md  pyproject.toml  qoder_protocol.md  start_backend.bat  test_agent.py  test_llm.py  test_profile_agent.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: audit_agent.py  base.py  content_writer_agent.py  hot_topic_agent.py  profile_agent.py  registry.py  title_generator_agent.py  topic_planner_agent.py
backend/app/api/: agent_routes.py  llm_provider_routes.py  skill_routes.py  stream_routes.py  task_routes.py
backend/app/core/: config.py  exceptions.py  logger.py  tracer.py
backend/app/db/: session.py
backend/app/llm/: __init__.py  base.py  config.py  exceptions.py  gateway.py
backend/app/llm/providers/: __init__.py  compatible.py  dashscope.py  deepseek.py  openai.py
backend/app/models/: __init__.py  tables.py
backend/app/orchestrator/: broadcaster.py  engine.py  workspace.py
backend/app/schemas/: __init__.py  agent.py  common.py  skill.py  task.py
backend/app/services/: task_service.py
backend/app/skills/: base.py  registry.py
backend/scripts/: test_dashscope_connectivity.py
backend/tests/: conftest.py  test_agent_api.py  test_llm_provider.py  test_profile_agent.py  test_task_api.py  test_workspace.py
(+240 files in other folders)
